--- a/config.toml
+++ b/config.toml
@@ -318,7 +318,7 @@ enableGitInfo = false
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
 # [[menu.main]]
-    name = "CV"
+    name = "resume/CV"
     url = "https://drive.google.com/file/d/0B4x15l9fUIsjMm01UTAyTkJvNm8/"
     weight = 7
 
