--- a/config.toml
+++ b/config.toml
@@ -18,7 +18,7 @@ copyright = "&copy; 2019"
 theme = "hugo-academic"
 enableEmoji = true
 footnotereturnlinkcontents = "<sup>^</sup>"
-ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$", ".R$", ".log$", "otherFiles"]
+ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$", "\\.R$", "\\.log$", "otherFiles"]
 preserveTaxonomyNames = true
 paginate = 10
 
