--- a/config.toml
+++ b/config.toml
@@ -301,19 +301,24 @@ enableGitInfo = true
   weight = 3
 
 [[menu.main]]
+  name = "USCAP2019Tweets"
+  url = "#USCAP2019Tweets"
+  weight = 4
+
+[[menu.main]]
   name = "Projects"
   url = "#projects"
-  weight = 4
+  weight = 5
 
 [[menu.main]]
   name = "Tutorials"
   url = "/tutorial/"
-  weight = 5
+  weight = 6
 
 [[menu.main]]
   name = "Contact"
   url = "#contact"
-  weight = 6
+  weight = 7
 
 
 # Link to a PDF of your resume/CV from the menu.
